[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = "1"
serde_json = "1.0"
serde_derive = "1"
tokio = { version = "1", features = ["full"]}
futures = { version = "0.3.25"}
winconsole = "0.11"